# ##############################################################################
# Copyright (C) Intel Corporation
#
# SPDX-License-Identifier: MIT
# ##############################################################################

add_subdirectory(mfxinit-test)
add_subdirectory(mfxinit-timing)
add_subdirectory(vpl-timing)
